--- a/SourceCode/2024/March2024/Shankar/Task 3/Main.xaml
+++ b/SourceCode/2024/March2024/Shankar/Task 3/Main.xaml
@@ -87,7 +87,7 @@
       <AssemblyReference>Microsoft.VisualBasic.Core</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="Task 3 &#xD;&#xA;&#xD;&#xA;step 1 create a variavle with date and time type variable&#xD;&#xA;step 2&#xD;&#xA;use write line activiy to  validate&#xD;&#xA;" DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="496,425" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="Task 3 &#xA;&#xA;step 1 &#xD;&#xA;create a variable  with date and time type variable&#xA;step 2&#xA;use write line activiy to  validate&#xA;" DisplayName="Date and time" sap:VirtualizedContainerService.HintSize="496,554" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="s:DateTime" Name="DT_datetime" />
     </Sequence.Variables>
@@ -97,14 +97,25 @@
         <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <Assign sap:VirtualizedContainerService.HintSize="434,122" sap2010:WorkflowViewState.IdRef="Assign_1">
+    <Assign sap2010:Annotation.AnnotationText="step 3&#xD;&#xA;take assign activity&#xD;&#xA;create varible system datetime and Now to use " DisplayName="create variable" sap:VirtualizedContainerService.HintSize="434,179" sap2010:WorkflowViewState.IdRef="Assign_1">
       <Assign.To>
         <OutArgument x:TypeArguments="s:DateTime">[DT_datetime]</OutArgument>
       </Assign.To>
       <Assign.Value>
         <InArgument x:TypeArguments="s:DateTime">[Now]</InArgument>
       </Assign.Value>
+      <sap:WorkflowViewStateService.ViewState>
+        <scg:Dictionary x:TypeArguments="x:String, x:Object">
+          <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
+        </scg:Dictionary>
+      </sap:WorkflowViewStateService.ViewState>
     </Assign>
-    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="434,113" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="[DT_datetime.ToString]" />
+    <WriteLine sap2010:Annotation.AnnotationText="step 4&#xD;&#xA;take write line activity&#xD;&#xA;to display datetime and use .tostring" DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="434,170" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="[DT_datetime.ToString]">
+      <sap:WorkflowViewStateService.ViewState>
+        <scg:Dictionary x:TypeArguments="x:String, x:Object">
+          <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
+        </scg:Dictionary>
+      </sap:WorkflowViewStateService.ViewState>
+    </WriteLine>
   </Sequence>
 </Activity>
