--- a/SourceCode/2024/March2024/Abishek/Task1_Abi_06032024/Main.xaml
+++ b/SourceCode/2024/March2024/Abishek/Task1_Abi_06032024/Main.xaml
@@ -78,7 +78,7 @@
       <AssemblyReference>System.Collections.NonGeneric</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="This Task cover following Activites:&#xD;&#xA;Step 1:  Write Line Activity to display in ouput panel&#xD;&#xA;Step 2: Display the message in pop up using Welcome Message box activity&#xD;&#xA;Step 3: Which display log message  in logs using log message Activity&#xD;&#xA;Step 4: Variable Declaration &#xD;&#xA;Step 5: Dynamic input variable assign during runtime" DisplayName="Assign Variable Activity" sap:VirtualizedContainerService.HintSize="416,928.6666666666666" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="Assign Variable Activity" sap:VirtualizedContainerService.HintSize="416,800" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="str_Name" />
     </Sequence.Variables>
@@ -93,8 +93,8 @@
         <OutArgument x:TypeArguments="x:String">[str_Name]</OutArgument>
       </ui:InputDialog.Result>
     </ui:InputDialog>
-    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="354,132" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="[&quot;Welcome to display in Output panel..Hello .&quot; +str_Name]" />
-    <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="354,184.66666666666666" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[&quot;Welcome to display in logs...Hello &quot; +str_Name]" />
-    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="354,109.33333333333333" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;Welcome to display in Pop up.... Hello &quot; +str_Name]" />
+    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="354,132" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="[&quot;Welcome message display in Output panel..Hello .&quot; +str_Name]" />
+    <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="354,184.66666666666666" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[&quot;Welcome message display in logs...Hello &quot; +str_Name]" />
+    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="354,109.33333333333333" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;Welcome message display in Pop up.... Hello &quot; +str_Name]" />
   </Sequence>
 </Activity>
